--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SGM</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li></li>
-                <li></li>
+    <header class="header">
+        <nav class="nav">
+            <a href="#" class="logo">LOGO</a>
+            <ul class="lista-nav">
+                <li><a href="#">DISCORD</a></li>
+                <li><a href="#">DISCORD</a></li>
             </ul>
         </nav>
     </header>
