--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <nav class="nav">
             <a href="#" class="logo">LOGO</a>
             <ul class="lista-nav">
-                <li><a href="#">DISCORD</a></li>
+                <li><a href="#">Menu</a></li>
                 <li><a href="#">DISCORD</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+      
     </main>
     <footer>
 
