--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <header class="header">
         <nav class="nav">
             <a href="#" class="logo">LOGO</a>
-            <ul class="lista-nav">
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">DISCORD</a></li>
-            </ul>
+            <i>Menu</i>
+            <i>ícone usuário</i>
         </nav>
     </header>
     <main>
