--- a/cadastro.html
+++ b/cadastro.html
@@ -1,30 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <header></header>
+   <!--NAVBAR - Só um comentário,Savvinha,quando for mexer,cuidado mexendo nas classes e tenha certeza de verificar as classes
+        no [estilo.css],com isso dito,Boa sorte se for mexer na nav meu mano!--> 
+        <header class="header">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+              <div class="container">
+                <!-- Logo-->
+                <a class="navbar-brand fs-4" href="index.html">Sistema SGM</a>
+                <!-- botão aí -->
+                <button 
+                  class="navbar-toggler shadow-none border-0" 
+                  type="button" 
+                  data-bs-toggle="offcanvas" 
+                  data-bs-target="#offcanvasNavbar" 
+                  aria-controls="offcanvasNavbar" 
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- Barra lateral tlgd -->
+                <div 
+                class="sidebar offcanvas offcanvas-start" 
+                tabindex="-1" 
+                id="offcanvasNavbar" 
+                aria-labelledby="offcanvasNavbarLabel"
+                >
+                <!-- Barra lateral do header,lê a porra do canvas...-->
+                  <div class="offcanvas-header text-white border-bottom">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Sistema de gerenciamento de merenda</h5>
+                    <button 
+                    type="button" 
+                    class="btn-close btn-close-white shadow-none"
+                    data-bs-dismiss="offcanvas" 
+                    aria-label="Close"
+                    ></button>
+                  </div>
+                  <!-- Barra lateral do corpo,se atentem as classes porque esse menu é feito usando o bootstrap. -->
+                  <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                      <li class="nav-item mx-2">
+                        <a class="nav-link " aria-current="page" href="index.html">Home</a>
+                      </li>
+                      <li class="nav-item mx-2">
+                        <a class="nav-link " href="login.html">login</a>
+                      </li>
+                      <li class="nav-item mx-2">
+                          <a class="nav-link active" href="cadastro.html">Cadastro</a>
+                        </li>
+            
+                    </ul>
+                    <!-- Login / Cadastro,respeitem a área,caso não respeitem,vou comer a mãe de vocês. -->
+                    <div class="d-flex justify-content-center align-items-center gap-3">
+                      <a href="login.html" class="text-white">Login</a>
+                      <a href="cadastro.html" id="cadastrotlgd">Cadastro</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </nav>
+      </header>
+       <!-- Fim da navbar -->
     <main>
         <img/> 
-        <form class="caixaForm" action="Index.html" onsubmit="return verificar()">
+        <form class="caixaForm" action="Index.html" onsubmit="return verificar2()">
             <br />
             <h1>Login</h1>
             <br />
             <div id="registro">
             <label>Usuário</label><br />
-            <input type="text" size="30" id="usuario" class="bordaslog"/> <br /> <br />
+            <input type="text" size="30" id="usuario" class="bordaslog"/> <br />
             <label>Senha</label> <br />
             <input type="text" id="senha" size="30" maxlength="20"/> <br /> 
-            <a href="#">Esqueceu a senha?</a> 
+            <label>Confime sua senha</label> <br/>
+            <input type="text" id="confirmarSenha" size="30" maxlength="20"> </br>
             </div>
             <div id="bots">
             <button type="subtmit" id="btnsubmit">Entrar</button>
-            <button type="button" id="btnsubmit" onclick="mostrarSenha()">Mostrar senha</button>
+            <button type="button" id="btnsubmit" onclick="mostrarSenha2()">Mostrar senha</button>
             </div>
             <a href="cadastro.html">Não registrado? <b>Cadastro</b></a>
             <br />
@@ -33,5 +93,6 @@
     </main>
     <footer></footer>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
