--- a/cadastro.html
+++ b/cadastro.html
@@ -84,8 +84,8 @@
             <input type="text" id="confirmarSenha" size="30" maxlength="20"> </br>
             <br />
             <div>
-            <button type="subtmit" id="btnsubmit">Entrar</button>
-            <button type="button" id="btnsubmit" onclick="mostrarSenha2()">Mostrar senha</button>
+            <button type="subtmit" id="botaosubmit">Entrar</button>
+            <button type="button" id="botaosubmit" onclick="mostrarSenha2()">Mostrar senha</button>
             </div>
            </form>
           </div>
