--- a/login.html
+++ b/login.html
@@ -82,10 +82,10 @@
             <label>Senha</label> <br />
             <input type="text" id="senha" size="45" maxlength="20"/> <br /> 
             <a href="#">Esqueceu a senha?</a> 
-           
+            <br /> <br />
             <div>
-            <button type="subtmit" id="btnsubmit">Entrar</button>
-            <button type="button" id="btnsubmit" onclick="mostrarSenha()">Mostrar senha</button>
+            <button type="subtmit" id="botaosubmit">Entrar</button>
+            <button type="button" id="botaosubmit" onclick="mostrarSenha()">Mostrar senha</button>
             </div>
            </form>
           </div>
