--- a/cadastro.html
+++ b/cadastro.html
@@ -83,9 +83,9 @@
             <label>Confime sua senha</label> <br/>
             <input type="text" id="confirmarSenha" size="30" maxlength="20"> </br>
             <br />
-            <div>
-            <button type="subtmit" id="botaosubmit">Entrar</button>
-            <button type="button" id="botaosubmit" onclick="mostrarSenha2()">Mostrar senha</button>
+            <div class="botoesSubmit">
+            <button type="subtmit" id="botaoSubmit">Entrar</button>
+            <button type="button" id="botaoSubmit" onclick="mostrarSenha2()">Mostrar senha</button>
             </div>
            </form>
           </div>
